Update to Minecraft 1.21.11, Gradle 9.2.1, and Loom 1.15-SNAPSHOT
- Updated Gradle to 9.2.1 and Loom to 1.15-SNAPSHOT
- Updated Minecraft to 1.21.11 with Yarn mappings
- Updated Fabric API to 0.141.1+1.21.11
- Updated MaLiLib to 0.27.7
- Updated AdvancedChatCore dependency to 1.21.11-2.0
- Adapted to Java 21 (using SequencedCollection methods)
- Fixed input handling for new Click and KeyInput API
- Fixed mouse event handling (mouseClicked, mouseDragged, mouseScrolled)
- Fixed keyboard event handling (keyPressed with KeyInput)
- Fixed GameProfile.name() accessor (changed from getName())
- Implemented visitor pattern for style extraction from OrderedText
- Fixed GuiContext creation for MaLiLib rendering
- Updated config storage to handle generic type changes
- Fixed copyright headers to 2026